Updating credential: WorkspaceSystemIdentity Updating pipeline: GetLabFilesFromHTTP Updating dataset: HTTPLabFilesZip Updating dataset: blobLabFilesZip Updating linkedService: LabFilesZip Updating linkedService: wplushiramsynapse-WorkspaceDefaultStorage Updating integrationRuntime: AutoResolveIntegrationRuntime Updating pipeline: UnzipLabFiles Updating dataset: bloblUnzipLabFiles Updating pipeline: MoveUnzippedFiles Updating pipeline: wait Updating pipeline: Primer Updating pipeline: DeltaChanges-Synapse Updating dataset: vDeltaTarget Updating dataset: LoaderXLTarget Updating notebook: DeltaChanges Updating dataset: vDeltaLastChanges Updating dataset: LoaderXLLastChanges Updating linkedService: wplushiramsynapseLoaderXL Updating linkedService: SQLOnDemand Updating pipeline: CrimeData-ADB Updating dataset: PublicDataset Updating dataset: DestinationDataset_nuj Updating linkedService: adbhf Updating linkedService: PublicDataset Updating pipeline: DevOpsCICD Updating pipeline: Params Updating notebook: Params Updating pipeline: ReadDeltaLog-ADB Updating pipeline: ReadDeltaLog-Synapse Updating notebook: ReadDeltaLog Updating pipeline: ADFOrcIntoDW Updating dataset: Orc_Sample Updating dataset: OrcSample Updating pipeline: sparkjob Adding sparkJobDefinition: wordcount Updating notebook: helloworld Updating dataset: resultwordcounttxt Updating dataset: resultwordcountparquet Updating pipeline: dominicks_oj_train-RegressionOnnx Updating notebook: dominicks_oj_train-RegressionOnnx Updating pipeline: E2E_MLFLOW_Sklearn_ADLS Updating notebook: E2E_MLFLOW_Sklearn_ADLS Updating pipeline: 13456789123456789123456789123456789123456789 Updating pipeline: CSV to ADX Updating dataset: LengthOfStay_cooked_small Updating dataset: freeadx Updating linkedService: freeadx Updating dataset: Target Updating dataset: LastChanges Updating dataset: SourceDataset_nuj Updating dataset: HolCSV Updating dataset: AzureSynapseAnalyticsTable1 Updating dataset: Binary1 Updating dataset: DelimitedText1

--- a/notebook/dominicks_oj_train-RegressionOnnx.json
+++ b/notebook/dominicks_oj_train-RegressionOnnx.json
@@ -43,7 +43,7 @@
 				"nodeCount": 10,
 				"cores": 64,
 				"memory": 400,
-				"automaticScaleJobs": false
+				"extraHeader": null
 			},
 			"sessionKeepAliveTimeout": 30
 		},
@@ -58,6 +58,7 @@
 					"from notebookutils import mssparkutils\n",
 					"from azureml.data.dataset_factory import TabularDatasetFactory"
 				],
+				"attachments": null,
 				"execution_count": 1
 			},
 			{
@@ -69,6 +70,7 @@
 					"ws = mssparkutils.azureML.getWorkspace(linkedService_name)\n",
 					"experiment = Experiment(ws, experiment_name)"
 				],
+				"attachments": null,
 				"execution_count": null
 			},
 			{
@@ -79,6 +81,7 @@
 					"datastore = Datastore.get_default(ws)\n",
 					"dataset = TabularDatasetFactory.register_spark_dataframe(df, datastore, name = experiment_name + \"-dataset\")"
 				],
+				"attachments": null,
 				"execution_count": null
 			},
 			{
@@ -93,6 +96,7 @@
 					"                             max_concurrent_iterations = 2,\n",
 					"                             enable_onnx_compatible_models = True)"
 				],
+				"attachments": null,
 				"execution_count": null
 			},
 			{
@@ -100,6 +104,7 @@
 				"source": [
 					"run = experiment.submit(automl_config)"
 				],
+				"attachments": null,
 				"execution_count": null
 			},
 			{
@@ -107,6 +112,7 @@
 				"source": [
 					"displayHTML(\"<a href={} target='_blank'>Your experiment in Azure Machine Learning portal: {}</a>\".format(run.get_portal_url(), run.id))"
 				],
+				"attachments": null,
 				"execution_count": null
 			},
 			{
@@ -168,6 +174,7 @@
 					"    # Register the model to AML model registry\n",
 					"    mlflow.register_model(\"runs:/\" + run.info.run_id + \"/\" + artifact_path, \"wplushiramsynapse-dominicks_oj_train-20211118120913-Best\")"
 				],
+				"attachments": null,
 				"execution_count": null
 			}
 		]
