--- a/pipeline/dominicks_oj_train-RegressionOnnx.json
+++ b/pipeline/dominicks_oj_train-RegressionOnnx.json
@@ -23,6 +23,8 @@
 				}
 			}
 		],
-		"annotations": []
-	}
+		"annotations": [],
+		"lastPublishTime": "2022-03-22T22:23:06Z"
+	},
+	"type": "Microsoft.Synapse/workspaces/pipelines"
 }
