--- a/notebook/dominicks_oj_train-RegressionOnnx.json
+++ b/notebook/dominicks_oj_train-RegressionOnnx.json
@@ -1,6 +1,9 @@
 {
 	"name": "dominicks_oj_train-RegressionOnnx",
 	"properties": {
+		"folder": {
+			"name": "_adhoc"
+		},
 		"nbformat": 4,
 		"nbformat_minor": 2,
 		"bigDataPool": {
