Updating pipeline: GetLabFilesFromHTTP Updating dataset: HTTPLabFilesZip Updating dataset: blobLabFilesZip Updating linkedService: LabFilesZip Updating linkedService: wplushiramsynapse-WorkspaceDefaultStorage Updating integrationRuntime: AutoResolveIntegrationRuntime Updating pipeline: UnzipLabFiles Updating dataset: bloblUnzipLabFiles Updating pipeline: MoveUnzippedFiles Updating pipeline: wait Updating pipeline: Primer Updating pipeline: Delta-Changes Updating dataset: vDeltaTarget Updating dataset: LoaderXLTarget Updating notebook: Delta-Changes Updating dataset: vDeltaLastChanges Updating dataset: LoaderXLLastChanges Updating linkedService: wplushiramsynapseLoaderXL Updating linkedService: SQLOnDemand Updating pipeline: CrimeData-ADB Updating dataset: PublicDataset Updating dataset: DestinationDataset_nuj Updating linkedService: adbhf Updating linkedService: PublicDataset Updating pipeline: DevOpsCICD Updating pipeline: Params Updating notebook: Params Updating pipeline: ADFOrcIntoDW Updating dataset: Orc_Sample Updating dataset: OrcSample Updating pipeline: sparkjob Adding sparkJobDefinition: wordcount Updating notebook: helloworld Updating dataset: resultwordcounttxt Updating dataset: resultwordcountparquet Updating pipeline: dominicks_oj_train-RegressionOnnx Updating notebook: dominicks_oj_train-RegressionOnnx Updating pipeline: E2E_MLFLOW_Sklearn_ADLS Updating notebook: E2E_MLFLOW_Sklearn_ADLS Updating pipeline: 13456789123456789123456789123456789123456789 Updating pipeline: CSV to ADX Updating dataset: LengthOfStay_cooked_small Updating dataset: freeadx Updating linkedService: freeadx Updating pipeline: Delta-ReadLog-ADB Updating pipeline: Delta-ReadLog Updating notebook: Delta-ReadLog Updating pipeline: Delta-FromScratch Updating notebook: Delta-FromScratch Updating pipeline: Delta-AutoDemo Updating pipeline: copy Updating dataset: copyLoS2 Updating dataset: Target Updating dataset: LastChanges Updating dataset: SourceDataset_nuj Updating dataset: HolCSV U

--- a/notebook/dominicks_oj_train-RegressionOnnx.json
+++ b/notebook/dominicks_oj_train-RegressionOnnx.json
@@ -41,13 +41,14 @@
 				"endpoint": "https://wplushiramsynapse.dev.azuresynapse.net/livyApi/versions/2019-11-01-preview/sparkPools/threetwo",
 				"auth": {
 					"type": "AAD",
-					"authResource": "https://dev.azuresynapse.net"
+					"authResource": "https://dev.azuresynapse.net",
+					"authHeader": null
 				},
 				"sparkVersion": "3.2",
 				"nodeCount": 5,
 				"cores": 4,
 				"memory": 28,
-				"automaticScaleJobs": false
+				"extraHeader": null
 			},
 			"sessionKeepAliveTimeout": 30
 		},
@@ -72,8 +73,7 @@
 					"\n",
 					"ws = mssparkutils.azureML.getWorkspace(linkedService_name)\n",
 					"experiment = Experiment(ws, experiment_name)"
-				],
-				"execution_count": null
+				]
 			},
 			{
 				"cell_type": "code",
@@ -82,8 +82,7 @@
 					"\n",
 					"datastore = Datastore.get_default(ws)\n",
 					"dataset = TabularDatasetFactory.register_spark_dataframe(df, datastore, name = experiment_name + \"-dataset\")"
-				],
-				"execution_count": null
+				]
 			},
 			{
 				"cell_type": "code",
@@ -96,22 +95,19 @@
 					"                             experiment_timeout_hours = 0.25,\n",
 					"                             max_concurrent_iterations = 2,\n",
 					"                             enable_onnx_compatible_models = True)"
-				],
-				"execution_count": null
+				]
 			},
 			{
 				"cell_type": "code",
 				"source": [
 					"run = experiment.submit(automl_config)"
-				],
-				"execution_count": null
+				]
 			},
 			{
 				"cell_type": "code",
 				"source": [
 					"displayHTML(\"<a href={} target='_blank'>Your experiment in Azure Machine Learning portal: {}</a>\".format(run.get_portal_url(), run.id))"
-				],
-				"execution_count": null
+				]
 			},
 			{
 				"cell_type": "code",
@@ -171,8 +167,7 @@
 					"\n",
 					"    # Register the model to AML model registry\n",
 					"    mlflow.register_model(\"runs:/\" + run.info.run_id + \"/\" + artifact_path, \"wplushiramsynapse-dominicks_oj_train-20211118120913-Best\")"
-				],
-				"execution_count": null
+				]
 			}
 		]
 	}
