--- a/pipeline/dominicks_oj_train-RegressionOnnx.json
+++ b/pipeline/dominicks_oj_train-RegressionOnnx.json
@@ -19,7 +19,13 @@
 						"referenceName": "dominicks_oj_train-RegressionOnnx",
 						"type": "NotebookReference"
 					},
-					"snapshot": true
+					"snapshot": true,
+					"conf": {
+						"spark.dynamicAllocation.enabled": null,
+						"spark.dynamicAllocation.minExecutors": null,
+						"spark.dynamicAllocation.maxExecutors": null
+					},
+					"numExecutors": null
 				}
 			}
 		],
